Trabalho 4/GeraMepa/gera_mepa.java
/* Generated By:JavaCC: Do not edit this line. gera_mepa.java */
import java.util.*;

public class gera_mepa implements gera_mepaConstants {
        static Hashtable<Integer, Dados> TabelaSimb = new Hashtable<Integer, Dados>();
        static Dados temp;
        static int cont = 0;

        static int cont_label = 2;
        static int ender = 0;
        static int ender_param = -5;
        static int nivelcorr = 0;
        static int nivel_num = 0;

        static int flag_writelong = 0;
        static int flag_readlong = 0;
        static int flag_writeline = 0;
        static int flag_menos = 0;
        static int flag_main = 0;
        static int flag_param = 0;

        static int num_param = 0;

        public static void main(String[] args)
        {
                try {
                        new gera_mepa(new java.io.FileInputStream(args[0])).Start();
                } catch (java.io.FileNotFoundException ex) {
                        System.out.println("Arquivo " + args[0] + "nao foi encontrado");
                        System.exit(-1);
                } catch (ParseException ex) {
                        System.out.println(ex.getMessage());
                        System.exit(-1);
                } catch (TokenMgrError ex) {
                        System.out.println(ex.getMessage());
                        System.exit(-1);
                }
        }

//Inicio
  static final public void Start() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
    case IDENT:
      Program();
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Programa
  static final public void Program() throws ParseException {
        int aux;
                TabelaSimb.put(cont++, new Dados("true", nivelcorr, "constante", "0", -1));
                TabelaSimb.put(cont++, new Dados("false", nivelcorr, "constante", "0", -1));
                Gera("null", "INPP", "null", "null");
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      VariableDeclaration();
    }
                                  Gera("null", "DSVS", "L1", "null");
                                                                        ender = 0;
    ProcedureDeclaration();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      ProcedureDeclaration();
    }
                aux = BuscaN(0, "variavel"); Gera("null", "DMEM", String.valueOf(aux), "null");
                Gera("null", "PARA", "null", "null");
                Gera("null", "FIM", "null", "null");
                //Imprime(); 

  }

//Declarações
  static final public void ProcedureDeclaration() throws ParseException {
        int aux;
    jj_consume_token(VOID);
    ProcedureHeading();
    jj_consume_token(14);
    ProcedureBody();
    jj_consume_token(15);
                aux = BuscaN(nivelcorr, "variavel");
                if(aux != 0) {
                        Gera("null", "DMEM", String.valueOf(aux), "null");
                        Retira(nivelcorr, "variavel");
                }
                nivelcorr = 0;

                if(flag_main == 0)
                        Gera("null", "RTPR", String.valueOf(num_param), "null");
                num_param = 0;
  }

  static final public void ProcedureBody() throws ParseException {
    label_3:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_3;
      }
      VariableDeclaration();
    }
    StatementSequence();
  }

  static final public void ProcedureHeading() throws ParseException {
        Token t;
    t = jj_consume_token(IDENT);
                if( (t.image).equals("main") ){
                        flag_main = 1;
                        Gera("L1", "NADA", "null", "null");
                        TabelaSimb.put(cont++, new Dados(String.valueOf(t.image), nivelcorr, "procedimento", "L1", 0));
                }
         nivelcorr++;
    jj_consume_token(16);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      FormalParameters();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(17);
                if(!(t.image).equals("main")){
                        flag_main = 0;
                        TabelaSimb.put(cont++,new Dados(String.valueOf(t.image),(nivelcorr-1),"procedimento","L"+String.valueOf(cont_label),num_param));
                        Gera("L"+String.valueOf(cont_label++), "ENPR", "1", "null");
                }
  }

  static final public void FormalParameters() throws ParseException {
        int i, j;
        Token t[] = new Token[10];
         ender_param = -5; i = 0;
    t[i] = FPSection();
         num_param++; i++;
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 18:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      jj_consume_token(18);
      t[i] = FPSection();
                                 num_param++; i++;
    }
                for(j = 0; j < i; j++){
                        TabelaSimb.put(cont++, new Dados(t[j].image, nivelcorr, "parametro", String.valueOf(ender_param-(i-1)), -1));
                        ender_param++;
                }
  }

  static final public Token FPSection() throws ParseException {
        Token t;
    Type();
    t = jj_consume_token(IDENT);
         {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public void VariableDeclaration() throws ParseException {
    Type();
    IdentList();
    jj_consume_token(19);
  }

  static final public void IdentList() throws ParseException {
        Token t;
        int n;
    t = jj_consume_token(IDENT);
                TabelaSimb.put(cont++, new Dados(t.image, nivelcorr, "variavel", String.valueOf(ender), -1));
                ender++;
                n = 1;
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 18:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      jj_consume_token(18);
      t = jj_consume_token(IDENT);
                TabelaSimb.put(cont++, new Dados(t.image, nivelcorr, "variavel", String.valueOf(ender), -1));
                ender++;
                n = n + 1;
    }
          Gera("null", "AMEM", String.valueOf(n), "null");
  }

  static final public void Type() throws ParseException {
    jj_consume_token(IDENT);
  }

//Comandos
  static final public void StatementSequence() throws ParseException {
    Statement();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case IDENT:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_6;
      }
      Statement();
    }
  }

  static final public void Statement() throws ParseException {
    if (jj_2_2(2)) {
      Assignment();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        ProcedureCall();
        break;
      case IF:
        IfStatement();
        break;
      case WHILE:
        WhileStatement();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

                                                                                                           //Mudei essa linha para verificar
  static final public void WhileStatement() throws ParseException {
        String aux, aux2;
    jj_consume_token(WHILE);
                Gera("L"+String.valueOf(cont_label), "NADA", "null", "null");
                aux = "L"+String.valueOf(cont_label++);
    jj_consume_token(16);
    Logical_OR();
    jj_consume_token(17);
                Gera("null", "DSVF", "L"+String.valueOf(cont_label), "null");
                aux2 = "L"+String.valueOf(cont_label++);
    jj_consume_token(14);
    StatementSequence();
    jj_consume_token(15);
                Gera("null", "DSVS", aux, "null");
                Gera(aux2, "NADA", "null", "null");
  }

  static final public void IfStatement() throws ParseException {
        Token t;
        String aux, aux2;
    t = jj_consume_token(IF);
    jj_consume_token(16);
    Logical_OR();
    jj_consume_token(17);
                Gera("null", "DSVF", "L"+String.valueOf(cont_label), "null");
                aux = "L"+String.valueOf(cont_label++);
    jj_consume_token(14);
    StatementSequence();
    jj_consume_token(15);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      t = jj_consume_token(ELSE);
                Gera("null", "DSVS", "L"+String.valueOf(cont_label), "null");
                aux2 = "L"+String.valueOf(cont_label++);
                Gera(aux, "NADA", "null", "null");
      jj_consume_token(14);
      StatementSequence();
      jj_consume_token(15);
          Gera(aux2, "NADA", "null", "null");
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
                if((t.image).equals("if"))
                        Gera(aux, "NADA", "null", "null");
  }

  static final public void ProcedureCall() throws ParseException {
        Token t;
        int flag = 0;
    t = jj_consume_token(IDENT);
                if((t.image).equals("WriteLong")){
                        flag_writelong = 1;
                } else if((t.image).equals("ReadLong")){
                        Gera("null", "LEIT", "null", "null");
                        flag_readlong = 1;
                } else if((t.image).equals("WriteLine")){
                        Gera("null", "IMPR", "null", "null");
                        flag_writeline = 1;
                } else {
                        flag = 1;
                }
         flag_param = 1;
    jj_consume_token(16);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
    case IDENT:
    case 16:
    case 29:
    case 30:
    case 34:
      ExpList();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(17);
    jj_consume_token(19);
                if(flag == 1){
                        temp = Busca(String.valueOf(t.image));
                        if(flag_main == 1)
                                Gera("null", "CHPR", temp.endereco, String.valueOf(temp.nivel));
                        else
                                Gera("null", "CHPR", temp.endereco, "1");
                }
         flag_param = 0;
  }

  static final public void ExpList() throws ParseException {
    Logical_OR();
                if(flag_writelong == 1)
                        Gera("null", "IMPR", "null", "null");
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 18:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_7;
      }
      jj_consume_token(18);
      Logical_OR();
                if(flag_writelong == 1)
                        Gera("null", "IMPR", "null", "null");
    }
          flag_writelong = 0;
  }

  static final public void Assignment() throws ParseException {
        Token t;
    t = Designator();
    jj_consume_token(20);
    Logical_OR();
    jj_consume_token(19);
                temp = Busca(String.valueOf(t.image));
                Gera("null", "ARMZ", String.valueOf(temp.nivel), String.valueOf(temp.endereco));
  }

//Expressões
  static final public void Logical_OR() throws ParseException {
    Logical_AND();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 21:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_8;
      }
      jj_consume_token(21);
      Logical_AND();
    }
  }

  static final public void Logical_AND() throws ParseException {
    Expression();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 22:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_9;
      }
      jj_consume_token(22);
      Expression();
    }
  }

  static final public void Expression() throws ParseException {
        int flag = -1;
    EqualityExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 23:
    case 24:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 23:
        jj_consume_token(23);
                flag = 0;
        break;
      case 24:
        jj_consume_token(24);
                                  flag = 1;
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      EqualityExpr();
                if(flag == 0)
                        Gera("null", "CMIG", "null", "null");
                if(flag == 1)
                        Gera("null", "CMDG", "null", "null");
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
  }

  static final public void EqualityExpr() throws ParseException {
        int flag = -1;
    SimpleExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 25:
    case 26:
    case 27:
    case 28:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
        jj_consume_token(25);
               flag = 0;
        break;
      case 26:
        jj_consume_token(26);
                                  flag = 1;
        break;
      case 27:
        jj_consume_token(27);
                                                    flag = 2;
        break;
      case 28:
        jj_consume_token(28);
                                                                       flag = 3;
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      SimpleExpr();
                if(flag == 0)
                        Gera("null", "CMME", "null", "null");
                if(flag == 1)
                        Gera("null", "CMEG", "null", "null");
                if(flag == 2)
                        Gera("null", "CMMA", "null", "null");
                if(flag == 3)
                        Gera("null", "CMAG", "null", "null");
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
  }

  static final public void SimpleExpr() throws ParseException {
        int flag = -1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 29:
    case 30:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 29:
        jj_consume_token(29);
        break;
      case 30:
        jj_consume_token(30);
                    flag_menos = 1;
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    Term();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 29:
      case 30:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 29:
        jj_consume_token(29);
               flag = 0;
        break;
      case 30:
        jj_consume_token(30);
                                 flag = 1;
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Term();
                if(flag == 0)
                        Gera("null", "SOMA", "null", "null");
                if(flag == 1)
                        Gera("null", "SUBT", "null", "null");
    }
  }

  static final public void Term() throws ParseException {
        int flag = -1;
    Unary();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 31:
      case 32:
      case 33:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 31:
        jj_consume_token(31);
                       flag = 0;
        break;
      case 32:
        jj_consume_token(32);
                                         flag = 1;
        break;
      case 33:
        jj_consume_token(33);
                                                           flag = 2;
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Unary();
                if(flag == 0)
                        Gera("null", "MULT", "null", "null");
                if(flag == 1)
                        Gera("null", "DIVI", "null", "null");
                if(flag == 2)
                        Gera("null", "REST", "null", "null");
    }
  }

  static final public void Unary() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 34:
      jj_consume_token(34);
      Unary();
      break;
    case NUMBER:
    case IDENT:
    case 16:
      Factor();
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Factor() throws ParseException {
        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      t = Designator();
                temp = Busca(String.valueOf(t.image));
                if((temp.categoria).equals("variavel")){
                        if(flag_readlong == 0)
                                Gera("null", "CRVL", String.valueOf(temp.nivel), String.valueOf(temp.endereco));
                        else
                                Gera("null", "ARMZ", String.valueOf(temp.nivel), String.valueOf(temp.endereco));
                        flag_readlong = 0;
                        flag_readlong = 0;
                }
                if((temp.categoria).equals("constante")){
                        if((temp.nome).equals("true"))
                                Gera("null", "CRCT", String.valueOf(1), "null");
                        else
                                Gera("null", "CRCT", String.valueOf(0), "null");
                }
                if((temp.categoria).equals("parametro")){
                        Gera("null", "CRVL", String.valueOf(temp.nivel), String.valueOf(temp.endereco));
                }
      break;
    case NUMBER:
      t = jj_consume_token(NUMBER);
                if(flag_menos == 1)
                        Gera("null", "CRCT", "-"+String.valueOf(t.image), "null");
                else
                        Gera("null", "CRCT", String.valueOf(t.image), "null");
                flag_menos = 0;
      break;
    case 16:
      jj_consume_token(16);
      Logical_OR();
      jj_consume_token(17);
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public Token Designator() throws ParseException {
        Token t;
    t = jj_consume_token(IDENT);
                     {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public void Gera(String rotulo, String codigo, String par1, String par2) throws ParseException {
        if(rotulo == "null"){
                if(par1 == "null" && par2 == "null")
                        System.out.println("      " + codigo);
                else if(par2 == "null")
                        System.out.println("      " + codigo + " " + par1);
                else
                        System.out.println("      " + codigo + " " + par1 + "," + par2);
        } else {
                if(par1 == "null" && par2 == "null")
                        System.out.println("" + rotulo + ":   " + codigo);
                else if(par2 == "null")
                        System.out.println("" + rotulo + ":   " + codigo + " " + par1);
                else
                        System.out.println("" + rotulo + ":   " + codigo + " " + par1 + "," + par2);
        }
  }

  static final public Dados Busca(String NomeProcurado) throws ParseException {
        Enumeration t = TabelaSimb.keys();
        int temp;
        Dados temp2;
        while (t.hasMoreElements() == true) {
                temp = (int)t.nextElement();
                temp2 = (Dados)TabelaSimb.get(temp);

                if((temp2.nome).equals(NomeProcurado))
                        {if (true) return temp2;}
        }

        {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public int BuscaN(int NivelProcurado, String CategoriaProcurada) throws ParseException {
        Enumeration t = TabelaSimb.keys();
        int temp, cont = 0;
        Dados temp2;
        while (t.hasMoreElements() == true) {
                temp = (int)t.nextElement();
                temp2 = (Dados)TabelaSimb.get(temp);

                if(temp2.nivel == NivelProcurado && (temp2.categoria).equals(CategoriaProcurada))
                        cont++;
        }

        {if (true) return cont;}
    throw new Error("Missing return statement in function");
  }

  static final public void Retira(int NivelProcurado, String CategoriaProcurada) throws ParseException {
        Enumeration t = TabelaSimb.keys();
        int temp, cont = 0;
        Dados temp2;
        while (t.hasMoreElements() == true) {
                temp = (int)t.nextElement();
                temp2 = (Dados)TabelaSimb.get(temp);

                if(temp2.nivel == NivelProcurado && (temp2.categoria).equals(CategoriaProcurada))
                        TabelaSimb.remove(temp);
        }
  }
